@startuml

!theme monokai from ..\data
hide class empty members


legend top left
    purposes = ('Похудение', 'Набор мышечной массы', 'Поддержание веса')
    levels = ('Низкий', 'Умеренный', 'Высокий', 'Интенсивный')
end legend


class UserData {
    {field}<&key> <b>id</b>: integer unsigned
    {field}<b>full_name</b>: varchar(50)
    {field}<b>age</b>: tinyint unsigned
    {field}<b>sex</b>: enum('M', 'F')
'    {field}<b>weight</b>: decimal(4,1)
    {field}<b>height</b>: tinyint unsigned
    {field}<b>purpose</b>: enum(<i>purposes</i>)
    {field}<b>activity_level</b>: enum(<i>levels</i>)
'    сделать свойством класса, возвращающим строку с интерпретацией
'    {field}<b>body_mass_index</b>: tinyint unsigned
}


class Product {
    {field}<&key> <b>id</b>: integer unsigned
    {field}<b>name</b>: varchar(30)
    {field}<b>calories</b>: smallint unsigned
    {field}<b>proteins</b>: smallint unsigned
    {field}<b>fats</b>: smallint unsigned
    {field}<b>carbohydrates</b>: smallint unsigned
}


class users_products {
    {field}<&key> <b>user_data_id</b>: integer unsigned
    {field}<&key> <b>product_id</b>: integer unsigned
}
hide users_products circle


class User {
    {field}<&key> <b>id</b>: integer unsigned
    {field}<b>username</b>: varchar(100)
    {field}<b>password</b>: varchar(50)
}


class Water{
    {field}<&key> <b>id</b>: integer unsigned
    {field}<b>water_volume</b>: decimal(2,1)
}


class users_water {
    {field}<&key> <b>user_data_id</b>: integer unsigned
    {field}<&key> <b>water_id</b>: integer unsigned
}
hide users_water circle


class Activity {
    {field}<&key> <b>id</b>: integer unsigned
    {field}<b>name</b>: varchar(30)
    {field}<b>runtime</b>: tinyint unsigned
    {field}<b>burned_calories</b>: smallint unsigned
}


class users_activity {
    {field}<&key> <b>user_data_id</b>: integer unsigned
    {field}<&key> <b>activity_id</b>: integer unsigned
}
hide users_activity circle


class Reports {
    {field}<&key> <b>id</b>: integer unsigned
    {field}<b>report_day</b>: date
    {field}<b>day_calories</b>: smallint unsigned
    {field}<b>day_proteins</b>: smallint unsigned
    {field}<b>day_fats</b>: smallint unsigned
    {field}<b>day_carbohydrates</b>: smallint unsigned
    {field}<b>day_water</b>: decimal(2,1)
    {field}<b>day_activity</b>: smallint unsigned
}


class user_reports {
    {field}<&key> <b>user_id</b>: integer unsigned
    {field}<&key> <b>reports_id</b>: integer unsigned
}
hide user_reports circle


class WeightChange{
    {field}<&key> <b>id</b>: integer unsigned
    {field}<b>day</b>: date
    {field}<b>weight</b>: decimal(4,1)
}


class user_weight_change {
    {field}<&key> <b>user_id</b>: integer unsigned
    {field}<&key> <b>weight_change_id</b>: integer unsigned
}
hide user_weight_change circle


'от порядка расположения объектов в связи и самих связей зависит и порядок расположения объектов на диаграмме

'подписи: связанные поля
'Activity "id" -- "activity_id" users_activity
'users_activity "user_data_id" --left-- "id" UserData
'
'User "id" -right- "id" UserData
'User "id" -- "reports_id" user_reports
'WeightChange "id" -- "id" Reports
'user_reports "reports_id" -- "id" Reports
'
'UserData "id" -- "weight_change_id" user_weight_change
'user_weight_change "weight_change_id" -- "id" WeightChange
'
'UserData "id" --- "user_data_id" users_products
'users_products "product_id" -- "id" Product
'
'UserData "id" --- "user_data_id" users_water
'users_water "water_id" -- "id" Water


'подписи: кратность связей
Activity "1" -- "*" users_activity
users_activity "*" -left- "1" Reports

'ОТВЕТИТЬ: так каким должен быть тип связи между User и Reports? один-к-одному, один-ко-многим или многие-ко-многим? выглядит так, будто вы перепробовали все, но так и не определились
'ОТВЕТ: один-ко-многим (один пользователь - калории, БЖУ, вода, активность))
User "1" -right- "1" UserData
User "1" -- "*" user_reports
user_reports "*" -- "1" Reports
'User "id" ---> "id" Reports

UserData "1" -- "*" user_weight_change
user_weight_change "*" -- "1" WeightChange

'отчеты и график изменения веса независимы
'WeightChange "1" -- "1" Reports

Reports "1" --- "*" users_products
users_products "*" -- "1" Product

Reports "1" --- "*" users_water
users_water "*" -- "1" Water



@enduml